--- a/examples/vanilla_mlp_recommender.ipynb
+++ b/examples/vanilla_mlp_recommender.ipynb
@@ -11,16 +11,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '/anaconda3/lib/python3.6', '/anaconda3/lib/python36.zip', '/anaconda3/lib/python3.6/site-packages', '/anaconda3/lib/python3.6/site-packages/IPython/extensions', '/Users/leowan/Desktop/git/', '/anaconda3/lib/python3.6/lib-dynload', '/anaconda3/lib/python3.6/site-packages/aeosa', '/Users/leowan/.ipython']\n"
+      "['', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python36.zip', '/home/work/.ipython', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/dataset-1.1.0-py3.6.egg', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/IPython/extensions', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/normality-1.0.0-py3.6.egg', '/home/work/notebook', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/lib-dynload']\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "tmp = set(sys.path)\n",
-    "tmp.add(\"/Users/leowan/Desktop/git/\")\n",
+    "tmp.add(\"/home/work/notebook\")\n",
     "sys.path = list(tmp)\n",
     "print(sys.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GPU setup\n",
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"7\""
    ]
   },
   {
@@ -29,7 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download dataset\n",
     "# download datasets\n",
     "import urllib.request\n",
     "dataset_prefix = 'http://s3.amazonaws.com/cornell-tech-sdl-openrec'\n",
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -80,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -184,17 +194,23 @@
     "    def train_connect(graph):\n",
     "        graph.interactiongraph['label'] = graph.inputgraph['label']\n",
     "\n",
-    "\n",
     "    return rec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "992 14598\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -204,7 +220,7 @@
        "       dtype=[('user_id', '<i4'), ('item_id', '<i4'), ('ts', '<i4')]))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,16 +228,34 @@
    "source": [
     "# dataset\n",
     "import recsys.dataset as dataset\n",
-    "total_users = 992   \n",
-    "total_items = 14598\n",
     "train_data = np.load('lastfm_train.npy')\n",
     "test_data = np.load('lastfm_test.npy')\n",
+    "total_users = max(set(list(train_data['user_id']) + list(test_data['user_id']))) + 1\n",
+    "total_items = max(set(list(train_data['item_id']) + list(test_data['item_id']))) + 1\n",
+    "print(total_users, total_items)\n",
     "train_data[:2], test_data[:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# datasets\n",
+    "import recsys.dataset as dataset\n",
+    "dataset = imp.reload(dataset)\n",
+    "train_dataset = dataset.Dataset(train_data, total_users, total_items, \n",
+    "                        sortby='ts', name='Train')\n",
+    "test_dataset = dataset.Dataset(test_data, total_users, total_items, \n",
+    "                       sortby='ts', name='Test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -238,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -256,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -272,24 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# datasets\n",
-    "import recsys.dataset as dataset\n",
-    "dataset = imp.reload(dataset)\n",
-    "train_dataset = dataset.Dataset(train_data, total_users, total_items, \n",
-    "                        sortby='ts', name='Train')\n",
-    "test_dataset = dataset.Dataset(test_data, total_users, total_items, \n",
-    "                       sortby='ts', name='Test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -305,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -319,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -330,65 +347,65 @@
      "text": [
       "\u001b[34m[Training starts, total_iter: 1000, eval_iter: 100, save_iter: 100]\u001b[0m\n",
       "\u001b[31m[iter 100]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 100]\u001b[0m loss: 9.495581\n",
+      "\u001b[31m[iter 100]\u001b[0m loss: 9.446880\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.6901089264917449\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.09333333333333334 0.13333333333333333 0.16 0.18\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.6894912196570071\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06 0.09333333333333334 0.13333333333333333 0.15666666666666668 0.17666666666666667\n",
       "\u001b[31m[iter 200]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 200]\u001b[0m loss: 9.008132\n",
+      "\u001b[31m[iter 200]\u001b[0m loss: 8.990755\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7058904797789499\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06666666666666667 0.08666666666666667 0.14 0.17 0.19\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7174108835148775\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11 0.15 0.17333333333333334 0.20666666666666667\n",
       "\u001b[31m[iter 300]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 300]\u001b[0m loss: 8.906515\n",
+      "\u001b[31m[iter 300]\u001b[0m loss: 8.892796\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7177821926879953\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.07666666666666666 0.10333333333333333 0.13333333333333333 0.18 0.2\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7299657463862438\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.10333333333333333 0.14666666666666667 0.19333333333333333 0.23\n",
       "\u001b[31m[iter 400]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 400]\u001b[0m loss: 8.866875\n",
+      "\u001b[31m[iter 400]\u001b[0m loss: 8.866284\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7305745472814049\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.1 0.14333333333333334 0.17333333333333334 0.19666666666666666\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7405855084378068\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.1 0.15 0.19333333333333333 0.23333333333333334\n",
       "\u001b[31m[iter 500]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 500]\u001b[0m loss: 8.780353\n",
+      "\u001b[31m[iter 500]\u001b[0m loss: 8.812748\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7370783951040167\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06 0.10666666666666667 0.13666666666666666 0.17333333333333334 0.20333333333333334\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7444369847685598\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.11666666666666667 0.15333333333333332 0.18666666666666668 0.22333333333333333\n",
       "\u001b[31m[iter 600]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 600]\u001b[0m loss: 8.736734\n",
+      "\u001b[31m[iter 600]\u001b[0m loss: 8.763260\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7416676942750794\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06 0.10666666666666667 0.15666666666666668 0.2 0.20666666666666667\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7523605307026557\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05 0.12 0.14666666666666667 0.18333333333333332 0.21666666666666667\n",
       "\u001b[31m[iter 700]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 700]\u001b[0m loss: 8.725367\n",
+      "\u001b[31m[iter 700]\u001b[0m loss: 8.712991\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7465595670343221\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.11333333333333333 0.15666666666666668 0.19 0.21666666666666667\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7575675367084561\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05 0.1 0.14666666666666667 0.17666666666666667 0.20333333333333334\n",
       "\u001b[31m[iter 800]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 800]\u001b[0m loss: 8.690134\n",
+      "\u001b[31m[iter 800]\u001b[0m loss: 8.712150\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7496987965563701\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.10333333333333333 0.15666666666666668 0.18666666666666668 0.21333333333333335\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7600059372930511\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.1 0.14666666666666667 0.18333333333333332 0.20666666666666667\n",
       "\u001b[31m[iter 900]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 900]\u001b[0m loss: 8.642936\n",
+      "\u001b[31m[iter 900]\u001b[0m loss: 8.704732\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7516729464958553\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.10666666666666667 0.15 0.17666666666666667 0.22666666666666666\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7621677970359206\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.1 0.14333333333333334 0.17333333333333334 0.21666666666666667\n",
       "\u001b[31m[iter 1000]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 1000]\u001b[0m loss: 8.659756\n",
+      "\u001b[31m[iter 1000]\u001b[0m loss: 8.655329\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7546331437966706\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06666666666666667 0.10333333333333333 0.15333333333333332 0.18666666666666668 0.23\n"
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.765769221986253\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.1 0.14333333333333334 0.18 0.21333333333333335\n"
      ]
     }
    ],
@@ -428,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
