--- a/examples/vanilla_mlp_recommender.ipynb
+++ b/examples/vanilla_mlp_recommender.ipynb
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python36.zip', '/home/work/.ipython', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/dataset-1.1.0-py3.6.egg', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/IPython/extensions', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/normality-1.0.0-py3.6.egg', '/home/work/notebook', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/lib-dynload']\n"
+      "['', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6', '/home/work/notebook', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages', '/home/work/.ipython', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/lib-dynload', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/dataset-1.1.0-py3.6.egg', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/IPython/extensions', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python36.zip', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/normality-1.0.0-py3.6.egg']\n"
      ]
     }
    ],
@@ -31,33 +31,22 @@
    "source": [
     "# GPU setup\n",
     "import os\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"7\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# download datasets\n",
-    "import urllib.request\n",
-    "dataset_prefix = 'http://s3.amazonaws.com/cornell-tech-sdl-openrec'\n",
-    "urllib.request.urlretrieve('%s/lastfm/lastfm_test.npy' % dataset_prefix, \n",
-    "                   'lastfm_test.npy')\n",
-    "urllib.request.urlretrieve('%s/lastfm/lastfm_train.npy' % dataset_prefix, \n",
-    "                   'lastfm_train.npy')"
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "# download datasets\n",
+    "#import urllib.request\n",
+    "#dataset_prefix = 'http://s3.amazonaws.com/cornell-tech-sdl-openrec'\n",
+    "#urllib.request.urlretrieve('%s/lastfm/lastfm_test.npy' % dataset_prefix, \n",
+    "#                   'lastfm_test.npy')\n",
+    "#urllib.request.urlretrieve('%s/lastfm/lastfm_train.npy' % dataset_prefix, \n",
+    "#                   'lastfm_train.npy')"
    ]
   },
   {
@@ -68,10 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "import recsys.recommenders.recommender_base as recommender_base\n",
-    "import recsys.modules.extractions.embedding_layer as embedding_layer\n",
-    "import recsys.modules.interactions.mlp_softmax as mlp_softmax"
+    "import numpy as np"
    ]
   },
   {
@@ -82,15 +68,33 @@
    },
    "outputs": [],
    "source": [
-    "import imp\n",
-    "recommender_base = imp.reload(recommender_base)\n",
-    "embedding_layer = imp.reload(embedding_layer)\n",
-    "mlp_softmax = imp.reload(mlp_softmax)"
+    "import tensorflow as tf\n",
+    "import recsys.recommenders.recommender_base as recommender_base\n",
+    "import recsys.modules.extractions.embedding_layer as embedding_layer\n",
+    "import recsys.modules.interactions.mlp_softmax as mlp_softmax\n",
+    "import recsys.modules.fusions.variable_average as variable_average\n",
+    "import recsys.modules.fusions.concatenate as concatenate"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import imp\n",
+    "recommender_base = imp.reload(recommender_base)\n",
+    "embedding_layer = imp.reload(embedding_layer)\n",
+    "mlp_softmax = imp.reload(mlp_softmax)\n",
+    "variable_average = imp.reload(variable_average)\n",
+    "concatenate = imp.reload(concatenate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -102,7 +106,6 @@
     "    \n",
     "    rec = recommender_base.Recommender(init_model_dir=init_model_dir,\n",
     "                      save_model_dir=save_model_dir, train=train, serve=serve)\n",
-    "\n",
     "    \n",
     "    @rec.traingraph.inputgraph(outs=['seq_item_id', 'seq_len', 'label'])\n",
     "    def train_input_graph(subgraph):\n",
@@ -121,7 +124,6 @@
     "                                                'seq_len': subgraph['seq_len'],\n",
     "                                                'label': subgraph['label']})\n",
     "        \n",
-    "        \n",
     "    @rec.servegraph.inputgraph(outs=['seq_item_id', 'seq_len'])\n",
     "    def serve_input_graph(subgraph):\n",
     "        subgraph['seq_item_id'] = tf.placeholder(tf.int32, \n",
@@ -132,7 +134,6 @@
     "                                      name='seq_len')\n",
     "        subgraph.register_global_input_mapping({'seq_item_id': subgraph['seq_item_id'],\n",
     "                                                'seq_len': subgraph['seq_len']})\n",
-    "\n",
     "    \n",
     "    @rec.traingraph.itemgraph(ins=['seq_item_id'], outs=['seq_vec'])\n",
     "    @rec.servegraph.itemgraph(ins=['seq_item_id'], outs=['seq_vec'])\n",
@@ -143,53 +144,50 @@
     "                                      shape=[total_items,dim_item_embed],\n",
     "                                      subgraph=subgraph,\n",
     "                                      scope='item')\n",
-    "        \n",
-    "    \n",
-    "    @rec.traingraph.interactiongraph(ins=['seq_vec', 'seq_len', 'label'])\n",
+    "\n",
+    "    @rec.traingraph.fusiongraph(ins=['seq_vec', 'seq_len'], outs=['fusion_vec'])\n",
+    "    @rec.servegraph.fusiongraph(ins=['seq_vec', 'seq_len'], outs=['fusion_vec'])\n",
+    "    def fusion_graph(subgraph):\n",
+    "        item_repr = variable_average.apply(sequence=subgraph['seq_vec'], seq_len=subgraph['seq_len'])\n",
+    "        fusion_vec = concatenate.apply([item_repr])\n",
+    "        subgraph['fusion_vec'] = fusion_vec\n",
+    "\n",
+    "    @rec.traingraph.interactiongraph(ins=['fusion_vec', 'label'])\n",
     "    def train_interaction_graph(subgraph):\n",
-    "        mlp_softmax.apply(user=None,\n",
-    "                   item=subgraph['seq_vec'],\n",
-    "                   seq_len=subgraph['seq_len'],\n",
-    "                   max_seq_len=max_seq_len,\n",
-    "                   dims=[dim_item_embed, total_items],\n",
-    "                   l2_reg=l2_reg_mlp,\n",
-    "                   labels=subgraph['label'],\n",
-    "                   dropout=dropout,\n",
-    "                   train=True,\n",
-    "                   subgraph=subgraph,\n",
-    "                   scope='MLPSoftmax'\n",
-    "                  )\n",
+    "        mlp_softmax.apply(\n",
+    "            in_tensor=subgraph['fusion_vec'],\n",
+    "            dims=[dim_item_embed, total_items],\n",
+    "            l2_reg=l2_reg_mlp,\n",
+    "            labels=subgraph['label'],\n",
+    "            dropout=dropout,\n",
+    "            train=True,\n",
+    "            subgraph=subgraph,\n",
+    "            scope='MLPSoftmax')\n",
     "\n",
-    "        \n",
-    "    @rec.servegraph.interactiongraph(ins=['seq_vec', 'seq_len'])\n",
+    "    @rec.servegraph.interactiongraph(ins=['fusion_vec'])\n",
     "    def serve_interaction_graph(subgraph):\n",
-    "        mlp_softmax.apply(user=None,\n",
-    "                   item=subgraph['seq_vec'],\n",
-    "                   seq_len=subgraph['seq_len'],\n",
-    "                   max_seq_len=max_seq_len,\n",
-    "                   dims=[dim_item_embed, total_items],\n",
-    "                   l2_reg=l2_reg_mlp,\n",
-    "                   train=False,\n",
-    "                   subgraph=subgraph,\n",
-    "                   scope='MLPSoftmax'\n",
-    "                   )\n",
+    "        mlp_softmax.apply(\n",
+    "            in_tensor=subgraph['fusion_vec'],\n",
+    "            dims=[dim_item_embed, total_items],\n",
+    "            l2_reg=l2_reg_mlp,\n",
+    "            train=False,\n",
+    "            subgraph=subgraph,\n",
+    "            scope='MLPSoftmax')\n",
     "\n",
-    "        \n",
     "    @rec.traingraph.optimizergraph\n",
     "    def optimizer_graph(subgraph):\n",
     "        losses = tf.add_n(subgraph.get_global_losses())\n",
     "        optimizer = tf.train.AdamOptimizer(learning_rate=0.001)\n",
     "        subgraph.register_global_operation(optimizer.minimize(losses))\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    @rec.traingraph.connector\n",
     "    @rec.servegraph.connector\n",
     "    def connect(graph):\n",
     "        graph.itemgraph['seq_item_id'] = graph.inputgraph['seq_item_id']\n",
-    "        graph.interactiongraph['seq_len'] = graph.inputgraph['seq_len']\n",
-    "        graph.interactiongraph['seq_vec'] = graph.itemgraph['seq_vec']\n",
+    "        graph.fusiongraph['seq_len'] = graph.inputgraph['seq_len']\n",
+    "        graph.fusiongraph['seq_vec'] = graph.itemgraph['seq_vec']\n",
+    "        graph.interactiongraph['fusion_vec'] = graph.fusiongraph['fusion_vec']\n",
     "\n",
-    "        \n",
     "    @rec.traingraph.connector.extend\n",
     "    def train_connect(graph):\n",
     "        graph.interactiongraph['label'] = graph.inputgraph['label']\n",
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -220,7 +218,7 @@
        "       dtype=[('user_id', '<i4'), ('item_id', '<i4'), ('ts', '<i4')]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -266,13 +264,13 @@
     "max_seq_len = 100       # the maxium length of user's listen history\n",
     "total_iter = int(1e3)   # iterations for training \n",
     "batch_size = 100        # training batch size\n",
-    "eval_iter = 100         # iteration of evaluation\n",
+    "eval_iter = 200         # iteration of evaluation\n",
     "save_iter = eval_iter   # iteration of saving model   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -298,15 +296,19 @@
    "source": [
     "# evaluators\n",
     "import recsys.metrics.auc as auc\n",
+    "import recsys.metrics.ndcg as ndcg\n",
     "import recsys.metrics.recall as recall\n",
+    "import recsys.metrics.precision as precision\n",
     "\n",
     "auc_evaluator = auc.AUC()\n",
-    "recall_evaluator = recall.Recall(recall_at=[100, 200, 300, 400, 500])"
+    "ndcg_evaluator = ndcg.NDCG(ndcg_at=[100])\n",
+    "recall_evaluator = recall.Recall(recall_at=[100, 200, 300, 400, 500])\n",
+    "precision_evaluator = precision.Precision(precision_at=[100])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -345,67 +347,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34m[Training starts, total_iter: 1000, eval_iter: 100, save_iter: 100]\u001b[0m\n",
-      "\u001b[31m[iter 100]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 100]\u001b[0m loss: 9.446880\n",
-      "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.6894912196570071\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06 0.09333333333333334 0.13333333333333333 0.15666666666666668 0.17666666666666667\n",
+      "\u001b[34m[Training starts, total_iter: 1000, eval_iter: 200, save_iter: 200]\u001b[0m\n",
       "\u001b[31m[iter 200]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 200]\u001b[0m loss: 8.990755\n",
+      "\u001b[31m[iter 200]\u001b[0m loss: 9.250999\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7174108835148775\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11 0.15 0.17333333333333334 0.20666666666666667\n",
-      "\u001b[31m[iter 300]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 300]\u001b[0m loss: 8.892796\n",
-      "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7299657463862438\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.10333333333333333 0.14666666666666667 0.19333333333333333 0.23\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7043582014569203\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.009870558521283797\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.03666666666666667 0.09666666666666666 0.14333333333333334 0.18333333333333332 0.2\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0003666666666666666\n",
       "\u001b[31m[iter 400]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 400]\u001b[0m loss: 8.866284\n",
+      "\u001b[31m[iter 400]\u001b[0m loss: 8.870298\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7405855084378068\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.1 0.15 0.19333333333333333 0.23333333333333334\n",
-      "\u001b[31m[iter 500]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 500]\u001b[0m loss: 8.812748\n",
-      "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7444369847685598\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.11666666666666667 0.15333333333333332 0.18666666666666668 0.22333333333333333\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7260179032221233\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.012322362320384824\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.09666666666666666 0.13666666666666666 0.17666666666666667 0.21\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005333333333333335\n",
       "\u001b[31m[iter 600]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 600]\u001b[0m loss: 8.763260\n",
+      "\u001b[31m[iter 600]\u001b[0m loss: 8.772934\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7523605307026557\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05 0.12 0.14666666666666667 0.18333333333333332 0.21666666666666667\n",
-      "\u001b[31m[iter 700]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 700]\u001b[0m loss: 8.712991\n",
-      "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7575675367084561\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05 0.1 0.14666666666666667 0.17666666666666667 0.20333333333333334\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7318332534082347\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.011434525589788807\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.10333333333333333 0.14333333333333334 0.19333333333333333 0.21333333333333335\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005333333333333334\n",
       "\u001b[31m[iter 800]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 800]\u001b[0m loss: 8.712150\n",
+      "\u001b[31m[iter 800]\u001b[0m loss: 8.717538\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7600059372930511\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.1 0.14666666666666667 0.18333333333333332 0.20666666666666667\n",
-      "\u001b[31m[iter 900]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 900]\u001b[0m loss: 8.704732\n",
-      "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7621677970359206\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.1 0.14333333333333334 0.17333333333333334 0.21666666666666667\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.740827567308351\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.015975541509033034\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11333333333333333 0.15333333333333332 0.19 0.22666666666666666\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006333333333333333\n",
       "\u001b[31m[iter 1000]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 1000]\u001b[0m loss: 8.655329\n",
+      "\u001b[31m[iter 1000]\u001b[0m loss: 8.670168\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.765769221986253\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.1 0.14333333333333334 0.18 0.21333333333333335\n"
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7458103263227603\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.01654118712507506\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11333333333333333 0.13666666666666666 0.18666666666666668 0.22333333333333333\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006333333333333333\n"
      ]
     }
    ],
@@ -416,7 +398,7 @@
     "    save_iter=save_iter,\n",
     "    train_sampler=train_sampler,\n",
     "    eval_samplers=[test_sampler], \n",
-    "    evaluators=[auc_evaluator, recall_evaluator])"
+    "    evaluators=[auc_evaluator, ndcg_evaluator, recall_evaluator, precision_evaluator])"
    ]
   },
   {
