--- a/examples/vanilla_mlp_recommender.ipynb
+++ b/examples/vanilla_mlp_recommender.ipynb
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6', '/home/work/notebook', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages', '/home/work/.ipython', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/lib-dynload', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/dataset-1.1.0-py3.6.egg', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/IPython/extensions', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python36.zip', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/normality-1.0.0-py3.6.egg']\n"
+      "['', '/home/work/notebook', '/home/work/.ipython', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python36.zip', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/dataset-1.1.0-py3.6.egg', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/lib-dynload', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/IPython/extensions', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/normality-1.0.0-py3.6.egg', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6']\n"
      ]
     }
    ],
@@ -100,9 +100,9 @@
    },
    "outputs": [],
    "source": [
-    "def VanlillaMlpRec(batch_size, dim_item_embed, max_seq_len, total_items,\n",
+    "def VanillaMlpRec(batch_size, dim_item_embed, max_seq_len, total_items,\n",
     "        l2_reg_embed=None, l2_reg_mlp=None, dropout=None, init_model_dir=None,\n",
-    "        save_model_dir='VanlillaMlpRec/', train=True, serve=False):\n",
+    "        save_model_dir='VanillaMlpRec/', train=True, serve=False):\n",
     "    \n",
     "    rec = recommender_base.Recommender(init_model_dir=init_model_dir,\n",
     "                      save_model_dir=save_model_dir, train=train, serve=serve)\n",
@@ -277,11 +277,11 @@
    "outputs": [],
    "source": [
     "# model\n",
-    "model = VanlillaMlpRec(batch_size=batch_size,\n",
+    "model = VanillaMlpRec(batch_size=batch_size,\n",
     "    total_items=train_dataset.total_items(),\n",
     "    max_seq_len=max_seq_len,\n",
     "    dim_item_embed=dim_item_embed,\n",
-    "    save_model_dir='VanlillaMlpRec/',\n",
+    "    save_model_dir='VanillaMlpRec/',\n",
     "    train=True, \n",
     "    serve=True)"
    ]
@@ -349,45 +349,45 @@
      "text": [
       "\u001b[34m[Training starts, total_iter: 1000, eval_iter: 200, save_iter: 200]\u001b[0m\n",
       "\u001b[31m[iter 200]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 200]\u001b[0m loss: 9.250999\n",
+      "\u001b[31m[iter 200]\u001b[0m loss: 9.227559\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7043582014569203\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.009870558521283797\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.03666666666666667 0.09666666666666666 0.14333333333333334 0.18333333333333332 0.2\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0003666666666666666\n",
+      "INFO:tensorflow:Restoring parameters from VanillaMlpRec/model.ckpt\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.719282044255669\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.015674682791214544\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11333333333333333 0.13333333333333333 0.16666666666666666 0.21\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006333333333333333\n",
       "\u001b[31m[iter 400]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 400]\u001b[0m loss: 8.870298\n",
+      "\u001b[31m[iter 400]\u001b[0m loss: 8.882123\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7260179032221233\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.012322362320384824\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.09666666666666666 0.13666666666666666 0.17666666666666667 0.21\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005333333333333335\n",
+      "INFO:tensorflow:Restoring parameters from VanillaMlpRec/model.ckpt\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7408312210271517\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.014803545130783838\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.11333333333333333 0.16333333333333333 0.19 0.21333333333333335\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005666666666666667\n",
       "\u001b[31m[iter 600]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 600]\u001b[0m loss: 8.772934\n",
+      "\u001b[31m[iter 600]\u001b[0m loss: 8.790908\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7318332534082347\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.011434525589788807\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.10333333333333333 0.14333333333333334 0.19333333333333333 0.21333333333333335\n",
+      "INFO:tensorflow:Restoring parameters from VanillaMlpRec/model.ckpt\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7460400538923523\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.014008616315461454\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.11 0.13666666666666666 0.17333333333333334 0.21333333333333335\n",
       "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005333333333333334\n",
       "\u001b[31m[iter 800]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 800]\u001b[0m loss: 8.717538\n",
+      "\u001b[31m[iter 800]\u001b[0m loss: 8.711631\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.740827567308351\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.015975541509033034\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11333333333333333 0.15333333333333332 0.19 0.22666666666666666\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006333333333333333\n",
+      "INFO:tensorflow:Restoring parameters from VanillaMlpRec/model.ckpt\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7551857687652714\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.015320073654707549\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06 0.11666666666666667 0.13666666666666666 0.17666666666666667 0.21333333333333335\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006\n",
       "\u001b[31m[iter 1000]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 1000]\u001b[0m loss: 8.670168\n",
+      "\u001b[31m[iter 1000]\u001b[0m loss: 8.660677\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
-      "INFO:tensorflow:Restoring parameters from VanlillaMlpRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7458103263227603\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.01654118712507506\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11333333333333333 0.13666666666666666 0.18666666666666668 0.22333333333333333\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006333333333333333\n"
+      "INFO:tensorflow:Restoring parameters from VanillaMlpRec/model.ckpt\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7575716471421068\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.015156053232358715\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06666666666666667 0.11333333333333333 0.14333333333333334 0.17666666666666667 0.22666666666666666\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006666666666666668\n"
      ]
     }
    ],
