--- a/examples/vanilla_rnn_recommender.ipynb
+++ b/examples/vanilla_rnn_recommender.ipynb
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python36.zip', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/dataset-1.1.0-py3.6.egg', '/home/work/.ipython', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/IPython/extensions', '/home/work/notebook', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/lib-dynload', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/normality-1.0.0-py3.6.egg']\n"
+      "['', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/IPython/extensions', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/dataset-1.1.0-py3.6.egg', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/site-packages/normality-1.0.0-py3.6.egg', '/home/work/.ipython', '/home/work/notebook', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python36.zip', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6/lib-dynload', '/home/work/anaconda3/envs/tensorflow_gpuenv/lib/python3.6']\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
     "            sequence=subgraph['seq_vec'], \n",
     "            seq_len=subgraph['seq_len'], \n",
     "            num_units=num_units, \n",
-    "            cell_type='gru',\n",
+    "            cell_type='lstm',\n",
     "            total_items=total_items, \n",
     "            label=subgraph['label'], \n",
     "            train=True, \n",
@@ -158,7 +158,7 @@
     "            sequence=subgraph['seq_vec'], \n",
     "            seq_len=subgraph['seq_len'],\n",
     "            num_units=num_units,\n",
-    "            cell_type='gru',\n",
+    "            cell_type='lstm',\n",
     "            total_items=total_items, \n",
     "            train=False, \n",
     "            subgraph=subgraph, \n",
@@ -253,7 +253,7 @@
     "max_seq_len = 100       # the maxium length of user's listen history\n",
     "num_units = 32          # Number of units in the RNN model\n",
     "total_iter = int(1e3)   # iterations for training \n",
-    "batch_size = 100        # training batch size\n",
+    "batch_size = 64        # training batch size\n",
     "eval_iter = 200         # iteration of evaluation\n",
     "save_iter = eval_iter   # iteration of saving model   "
    ]
@@ -272,7 +272,7 @@
     "    max_seq_len=max_seq_len, \n",
     "    total_items=train_dataset.total_items(), \n",
     "    num_units=num_units, \n",
-    "    save_model_dir='VanillaRnnRec/', \n",
+    "    save_model_dir='VanillaRnnRec', \n",
     "    train=True, serve=True)"
    ]
   },
@@ -307,9 +307,8 @@
     "# sampler\n",
     "import recsys.samplers.temporal_sampler as temporal_sampler\n",
     "train_sampler = temporal_sampler.create_training_sampler(batch_size=batch_size, max_seq_len=max_seq_len, \n",
-    "                                dataset=train_dataset, num_process=1)\n",
-    "test_sampler = temporal_sampler.create_evaluation_sampler(dataset=test_dataset, \n",
-    "                                         max_seq_len=max_seq_len)"
+    "    dataset=train_dataset, num_process=1)\n",
+    "test_sampler = temporal_sampler.create_evaluation_sampler(dataset=test_dataset, max_seq_len=max_seq_len)"
    ]
   },
   {
@@ -339,45 +338,45 @@
      "text": [
       "\u001b[34m[Training starts, total_iter: 1000, eval_iter: 200, save_iter: 200]\u001b[0m\n",
       "\u001b[31m[iter 200]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 200]\u001b[0m loss: 9.145113\n",
+      "\u001b[31m[iter 200]\u001b[0m loss: 9.184467\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanillaRnnRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.727135027745427\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.013805037637582434\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.11 0.13666666666666666 0.18 0.19\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005666666666666667\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7251238839030851\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.012085527505495257\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.11666666666666667 0.17333333333333334 0.20666666666666667 0.23333333333333334\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005333333333333335\n",
       "\u001b[31m[iter 400]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 400]\u001b[0m loss: 8.827863\n",
+      "\u001b[31m[iter 400]\u001b[0m loss: 8.896507\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanillaRnnRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7564718777831061\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.012652879796065783\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06666666666666667 0.12333333333333334 0.16333333333333333 0.19 0.24\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006666666666666668\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7498970108013062\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.013850202482113435\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.10666666666666667 0.17333333333333334 0.21 0.23666666666666666\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005666666666666666\n",
       "\u001b[31m[iter 600]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 600]\u001b[0m loss: 8.742294\n",
+      "\u001b[31m[iter 600]\u001b[0m loss: 8.796550\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanillaRnnRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7569059852481104\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.012201307263516297\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11 0.16333333333333333 0.19333333333333333 0.22\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7510002055216825\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.013794222057408587\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.06333333333333334 0.11333333333333333 0.15 0.18666666666666668 0.21666666666666667\n",
       "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0006333333333333333\n",
       "\u001b[31m[iter 800]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 800]\u001b[0m loss: 8.698358\n",
+      "\u001b[31m[iter 800]\u001b[0m loss: 8.755205\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanillaRnnRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7574905802562171\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.011767993125831412\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.11666666666666667 0.16333333333333333 0.18333333333333332 0.22333333333333333\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005666666666666667\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7575912858806604\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.011307643227090021\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05333333333333334 0.1 0.14666666666666667 0.19666666666666666 0.22333333333333333\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005333333333333334\n",
       "\u001b[31m[iter 1000]\u001b[0m Model saved.\n",
-      "\u001b[31m[iter 1000]\u001b[0m loss: 8.648366\n",
+      "\u001b[31m[iter 1000]\u001b[0m loss: 8.699480\n",
       "\u001b[32m..(dataset: Test) evaluation\u001b[0m\n",
       "INFO:tensorflow:Restoring parameters from VanillaRnnRec/model.ckpt\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7603521271494142\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.010458230107463756\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.056666666666666664 0.1 0.14333333333333334 0.17 0.20333333333333334\n",
-      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005666666666666666\n"
+      "\u001b[32m..(dataset: Test)\u001b[0m AUC 0.7587403804434703\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m NDCG 0.013240340447194151\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Recall 0.05 0.10333333333333333 0.14333333333333334 0.18333333333333332 0.21\n",
+      "\u001b[32m..(dataset: Test)\u001b[0m Precision 0.0005\n"
      ]
     }
    ],
@@ -393,10 +392,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# serve\n",
+    "serve_sampler = temporal_sampler.create_evaluation_sampler(dataset=test_dataset, max_seq_len=max_seq_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([957],\n",
+       " array([([ 7553,  1868, 12984,  2195,  9865,  2104,   833, 13487,   498,   606,  8813,  2019,  5007,  1161,  2247,   322,   119,  4429,  1323,  1087,  9298,   469,  1972,   905,    42, 13883,  1710,  2908,  1482,   964,  2604,  1057,  2482,   279,   551,  3667,  3035,  4282,   823,  5059,    66,  2181,   420,   488,  3322,   976,  1530,  1411, 13244,  1063,  4714,  8850,  2865,    41,  1249,    81,  5502,  1869, 12974,  5697,   354, 12359,  1422,   124,   181,  5854,   935,   648,  2692,   743,  2588, 14444,  2406,  4202,  2404,  6703,  6826, 10896,  1348,   108,  6509,   966,  2895,   707,  1424,  9096,   259,  1164,  4381,   535,  2607,  5953,  7507,  2550,  2431,   283,  3659,  7069,  5322,   957], 100)],\n",
+       "       dtype=[('seq_item_id', '<i4', (100,)), ('seq_len', '<i4')]))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lbl, input_data = serve_sampler.next_batch()\n",
+    "lbl, input_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outputs: {'losses': [], 'outputs': [array([ 0.60049284,  0.49547878,  0.23498696, ..., -2.1666248 ,\n",
+      "       -2.0712152 , -3.2872112 ], dtype=float32)]}\n",
+      "indices: [  1 110  40  38  62  15  35  71  36   4  75  16  83  27  42  33   0  30\n",
+      "  63   3]\n",
+      "probs: [0.49547878 0.49794176 0.5048535  0.506617   0.5095771  0.51044035\n",
+      " 0.5251231  0.5286194  0.53370965 0.5420119  0.5465682  0.5520555\n",
+      " 0.56734854 0.5715802  0.5928797  0.5964658  0.60049284 0.61573917\n",
+      " 0.62040275 0.6322938 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_dict = model.serve(batch_data=input_data)\n",
+    "print(\"outputs:\", output_dict)\n",
+    "predict_proba = output_dict['outputs'][0].ravel()\n",
+    "ind_largest = np.argsort(predict_proba)[-20:]\n",
+    "print(\"indices:\", ind_largest)\n",
+    "print(\"probs:\", predict_proba[ind_largest])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:No assets to save.\n",
+      "INFO:tensorflow:No assets to write.\n",
+      "INFO:tensorflow:SavedModel written to: b'VanillaRnnRec_exported_pb/saved_model.pb'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# export\n",
+    "model.export()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from b'VanillaRnnRec_exported_pb/variables/variables'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'y_0': array([ 0.60049284,  0.49547878,  0.23498696, ..., -2.1666248 ,\n",
+       "        -2.0712152 , -3.2872112 ], dtype=float32)}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# predict using pb model\n",
+    "model.predict_pb(feed_name_dict={\n",
+    "    'seq_item_id': input_data['seq_item_id'],\n",
+    "    'seq_len': input_data['seq_len']\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
