--- a/examples/linear_ranknet_recommender.ipynb
+++ b/examples/linear_ranknet_recommender.ipynb
@@ -709,7 +709,7 @@
     }
    ],
    "source": [
-    "## Export Protobuf model for online serving\n",
+    "# Export Protobuf model for online serving\n",
     "model.export(export_model_dir=\"pbModel\", as_text=False)"
    ]
   },
