--- a/examples/feeds_recommender.ipynb
+++ b/examples/feeds_recommender.ipynb
@@ -33,7 +33,7 @@
     "feeds_fm_recommender = imp.reload(feeds_fm_recommender)\n",
     "model = feeds_fm_recommender.FeedsFMRecommender(fea_user_demography_dim=20, fea_user_stat_dim=20, fea_user_history_dim=50,\n",
     "    fea_item_meta_dim=20, fea_item_stat_dim=20, fea_context_hour_dim=10,\n",
-    "    total_item_num=200000)"
+    "    total_item_num=2000, train=True, serve=True)"
    ]
   },
   {
